k8s/accounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deployment
  labels:
    app: accounts
spec:
  replicas: 5
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
      - name: accounts
        image: imeguras/allchataccounts:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
