k8s/accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
  labels:
    app: accounts
spec:
  selector:
    app: accounts
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
