k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: ClusterIP
  selector:
    app: chat
  ports:
    - port: 8001
      targetPort: 8001
