k8s/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  type: NodePort
  selector:
    app: websocket
  ports:
    - port: 8001
      targetPort: 8001
